Fix moving local selection mask created from global selection

The problem was caused but a code-duplication bug in KisShapeSelection,
which resulted in sigMoveShapes() not being connected anywhere.

BUG:411802